fix small screen overflow bug

--- a/styles.css
+++ b/styles.css
@@ -201,7 +201,7 @@ small {
     }
 
     img {
-        width: 350px;
+        width: 315px;
     }
 
     input[type=email] {
